--- a/projects/intl-input-isj-isi-three/src/lib/phonenumber/phonenumber.component.css
+++ b/projects/intl-input-isj-isi-three/src/lib/phonenumber/phonenumber.component.css
@@ -1,21 +1,3 @@
-
-.container{
-    display: flex;
-    margin: auto;
-    margin-top: 20px;
-}
-.container > div:nth-child(2) > input{
-    height: 30px;
-    border-radius: 6px;
-    color: #e0115f;
-
-}
-.container > div:nth-child(1) > select{
-    height: 35px;
-    border-radius: 6px;
-    color: #e0115f;
-    width: 50px;
-}
 .container-validator{
     margin-top: 5px;
     margin-left: 10px;
@@ -29,33 +11,26 @@
 .container-all{
     margin-left: 30px;
 }
-/* 
-   
-p{
-margin-left : 70px;
-color : red;
-}
-.indicative{
-    color: grey;
-    margin-left: 10px;
-} */
-
-
 .input-numtel:focus-visible,
 .select-numtel:focus-visible{
     border: none;
     outline: none;
 }
 
-.group-phone{
+.group-phone ,.changeBorderDanger,.changeBorderSuccess{
     width: fit-content;
     min-width: 200px;
     max-width: max-content;
 }
 .group-phone:focus-within{
-    box-shadow: 0px 0px 3px #318ce7;
+    box-shadow: 0px 0px 3px #0abab5;
+}
+.changeBorderDanger:focus-within{
+    box-shadow: 0px 0px 3px red;
+}
+.changeBorderSuccess:focus-visible{
+    box-shadow: 0px 0px 3px green;
 }
 .label-tel{
     margin-bottom: 8px;
-    display: block;
 }
