--- a/projects/intl-input-isj-isi-three/src/lib/phonenumber/phonenumber.component.html
+++ b/projects/intl-input-isj-isi-three/src/lib/phonenumber/phonenumber.component.html
@@ -1,7 +1,6 @@
-
     <div class="container-all">
         <label class="label-tel">Numero de Telephone</label>
-        <div class="d-flex align-items-center  form-control group-phone">
+        <div class="d-flex align-items-center  form-control group-phone {{classStyleFocus}}">
             <div>
                 <span><li class = "flag-icon flag-icon-{{countrySelectIso}} "></li></span>
                 <select class="border-0 select-numtel" [(ngModel)] = "countrySelected" (change) = "changeCountry($event)">
@@ -16,9 +15,6 @@
         </div>
         
     </div>
-    <!-- <span><li class = "flag-icon flag-icon-{{countrySelected[8].iso}}  ms-3"></li></span> -->
-    <!-- <p>{{errorMessage}}</p> -->
-
     
 
 
